# children

./: .gitignore
Happy/client/: CMakeLists.txt  main.cpp
Happy/client/include/: ConnectManager.h  Connector.h  IConnector.h  MessageHandler.h  MessageManager.h  Packet.h  Singleton.h  TCPConnector.h  network.h  table_generated.h
Happy/client/include/handler/: CommandHandler.h  HallHandler.h  TableHandler.h
Happy/client/include/module/: hall_generated.h
Happy/client/src/: ConnectManager.cpp  Connector.cpp  MessageManager.cpp  Packet.cpp  TCPConnector.cpp  network.cpp  network_wrap.cxx
Happy/client/src/handler/: CommandHandler.cpp  HallHandler.cpp  TableHandler.cpp
Happy/client/swig/: gen.sh  network.i
Happy/client/swig/cs/: network.cs  networkPINVOKE.cs
Happy/server/gate/: CMakeLists.txt
Happy/server/gate/flatbuffers/: gate.fbs  genfbs.sh  hall.fbs  room.fbs  table.fbs
Happy/server/gate/include/: Application.h  Message.h  MessageHandler.h  MessageManager.h  ModuleListener.h  Packet.h  Player.h  PlayerManager.h  Request.h  Root.h  Server.h  Session.h  gate_generated.h  socket.h
Happy/server/gate/include/handle/: HallHandler.h  Handler.h  ModuleDef.h  RoomHandler.h
Happy/server/gate/include/module/: TableHandler.h
Happy/server/gate/include/module/game/: GameManager.h  GameServer.h
Happy/server/gate/include/module/games/mahjong/: MahjongServer.h
Happy/server/gate/include/module/hall/: HallServer.h  hall_generated.h
Happy/server/gate/include/module/room/: RoomManager.h  room_generated.h
Happy/server/gate/include/module/server/: Message.h  MessageManager.h  Packet.h  Server.h
Happy/server/gate/include/services/: TableHandler.h  TableManager.h
Happy/server/gate/include/utils/: uuid.h
Happy/server/gate/src/: Application.cpp  Message.cpp  MessageManager.cpp  Packet.cpp  Player.cpp  PlayerManager.cpp  Request.cpp  Root.cpp  Server.cpp  Session.cpp  main.cpp  socket.cpp
Happy/server/gate/src/handle/: HallHandler.cpp  RoomHandler.cpp
Happy/server/gate/src/module/: TableHandler.cpp
Happy/server/gate/src/module/game/: GameManager.cpp  GameServer.cpp
Happy/server/gate/src/module/game/mahjong/: MahjongServer.cpp
Happy/server/gate/src/module/hall/: HallServer.cpp
Happy/server/gate/src/module/room/: RoomManager.cpp
Happy/server/gate/src/module/server/: Message.cpp  MessageManager.cpp  Packet.cpp  Server.cpp
Happy/server/gate/src/services/: TableHandler.cpp  TableManager.cpp
Happy/server/gate/src/utils/: uuid.cpp
MahjongServer/: CMakeLists.txt
MahjongServer/include/: ConnectListener.h  FiledescListener.h  FiledescListenerManager.h  socket.h
MahjongServer/src/: ConnectListener.cpp  FiledescListener.cpp  FiledescListenerManager.cpp  main.cpp  socket_posix.cpp
doc/: libuv.md
web/: share.sublime-workspace
web/Bridge/: Gemfile  README.md  package.json  start.sh
web/Bridge/app/controllers/: login_controller.rb
web/Bridge/app/views/layouts/: application.html.erb  main.html.erb
web/Bridge/app/views/login/: index.html.erb  register.html.erb
web/Bridge/app/views/welcome/: index.html.erb
web/Bridge/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
web/Bridge/config/environments/: production.rb
web/Bridge/db/: schema.rb
web/Bridge/db/migrate/: 20180527115510_create_users.rb
wiki/: c++ platform.txt  go.txt  socket.h  socket_posix.cpp
